--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Naveen Gurram's Personal WebSite
+title: Naveen Gurram
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: username
 github_username: NaveenGurram
-minimal_mistakes_skin: air
+minimal_mistakes_skin: Air
 search: true
 
 # Build settings
@@ -31,7 +31,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: US/Eastern
 
 include:
   - _pages
@@ -58,9 +58,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/avataars.png"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   : "Naveen Gurram"
+  avatar : "/assets/images/actual.jpg"
+  bio    : "Software Developer and Architect."
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
