--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,5 @@ main:
     url: /about/  
   - title: "Posts"
     url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Resume"
+    url: /assets/files/NaveenGurram.pdf
