--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,3 +5,7 @@ main:
     url: /posts/
   - title: "Resume"
     url: /assets/files/NaveenGurram.pdf
+  - title: "Categories"
+    url: /categories/
+  - title: "Tags"
+    url: /tags/    
