--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >-
   My name is Naveen Gurram. I was born in India but I've been living in USA since 2007. I'm a software engineer primarily working with Java. You can read more about me in the About me section
 linkedin_username: NaveenGurram  
 github_username: NaveenGurram
-twitter_username: NaveenGurram
+twitter_username: NaveenkGurram
 minimal_mistakes_skin: air
 search: true
 
@@ -65,7 +65,7 @@ author:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/NaveenGurram"
+      url: "https://twitter.com/NaveenkGurram"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/NaveenGurram"
@@ -83,7 +83,7 @@ footer:
       url: "https://github.com/NaveenGurram"       
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/NaveenGurram"
+      url: "https://twitter.com/NaveenkGurram"
 defaults:
   # _posts
   - scope:
