--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Naveen Gurram
 email: gurram.naveen@gmail.com
 description: >-
-  Hi there, I'm Naveen Gurram. I was born in India but I've been living in USA since 2007. I'm a software engineer primarily working with Java. You can read more about me in the About me section
+  Hi there, I'm Naveen Gurram. I'm a software engineer primarily work on backend. You can read more about me in the About me section
 linkedin_username: NaveenGurram  
 github_username: NaveenGurram
 minimal_mistakes_skin: air
@@ -24,7 +24,7 @@ search: true
 
 # Build settings
 markdown: kramdown
-remote_theme: mmistakes/minimal-mistakes
+remote_theme: "jeffreytse/jekyll-theme-yat"
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Naveen Gurram"
   avatar : "/assets/images/naveen.png"
-  bio    : "Hi there I'm Naveen Gurram. I was born in India but I've been living in USA since 2007. I'm a software engineer primarily working with Java. You can read more about me in the About me section"
+  bio    : "Hi there I'm Naveen Gurram. I'm a software engineer primarily work on backend. You can read more about me in the About me section"
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
