--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 main:
   - title: "About Me"
     url: /about/
+  - title: "LinkedIn"
+    url: https://www.linkedin.com/in/naveengurram
+  - title: "Github"
+    url: https://www.github.com/naveengurram
   - title: "Posts"
     url: /posts/
   - title: "Resume"
